Bug fixes
Playing against real opponents (not CPUs) no longer causes puyos to become invisible.
Game no longer becomes non-functional when real opponents (not CPUs) start chains.
Opponents's scores are now updated even if skipFrames is set to 0.
The Join Room modal box was updated for consistency.

--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -296,7 +296,7 @@ input.numPlayerButton {
 /* ---------- Join Room Modal Box ---------- */
 
 #joinRoomModal {
-	width: 25%;
+	width: 30%;
 	margin-top: 20%;
 
 	input {
@@ -306,9 +306,9 @@ input.numPlayerButton {
 	}
 }
 
-// Uneditable text that illustrates the "?joinId=" prefix.
-#joinIdFiller {
-	width: 155px;
+// Uneditable text that illustrates the "?joinRoom=" prefix.
+#joinRoomFiller {
+	width: 225px;
 	margin: 10px -10px 10px 0px;
 
 	color: white;
